Signed-off-by: Dr M H B Ariyaratne <buddhika.ari@gmail.com>

--- a/src/main/webapp/admin/institutions/admin_mange_department_preferences.xhtml
+++ b/src/main/webapp/admin/institutions/admin_mange_department_preferences.xhtml
@@ -256,7 +256,7 @@
                                         <h:outputLabel value="Inward Mo Charge Calculate Initial Time"></h:outputLabel>
                                         <p:selectBooleanButton class="form-control" offIcon="fas fa-check" onIcon="fas fa-times" value="#{sessionController.currentPreference.inwardMoChargeCalculateInitialTime}"/>
 
-                                        <h:outputLabel value="Change Admission Fee in Intrim Bill"></h:outputLabel>
+                                        <h:outputLabel value="Change Admission Fee in Interim Bill"></h:outputLabel>
                                         <p:selectBooleanButton class="form-control" offIcon="fas fa-check" onIcon="fas fa-times" value="#{sessionController.currentPreference.inwardChangeAdmissionFee}"/>
 
                                     </h:panelGrid>
