--- a/src/main/webapp/inward/inward_bill_final.xhtml
+++ b/src/main/webapp/inward/inward_bill_final.xhtml
@@ -468,7 +468,7 @@
                                 <p:commandButton value="Print Duplicate Copy" ajax="false" >
                                     <p:printer target="claimableDuplicate" ></p:printer>
                                 </p:commandButton> 
-                                <p:commandButton value="Check Intrim " ajax="false" action="inward_bill_intrim" actionListener="#{bhtSummeryController.prepareNewBill()}"  styleClass="noPrintButton" onclick="onSubmitButton();">
+                                <p:commandButton value="Check Interim " ajax="false" action="inward_bill_intrim" actionListener="#{bhtSummeryController.prepareNewBill()}"  styleClass="noPrintButton" onclick="onSubmitButton();">
                                 </p:commandButton>
                             </h:panelGrid>
                         </p:panel>
@@ -477,7 +477,7 @@
                                 <p:commandButton value="Final Bill &amp; Profesional Bill" ajax="false">
                                     <p:printer target="professionalAndFinaBill" ></p:printer>
                                 </p:commandButton> 
-                                <p:commandButton value="Check Intrim " ajax="false" action="inward_bill_intrim" actionListener="#{bhtSummeryController.prepareNewBill()}"  styleClass="noPrintButton" onclick="onSubmitButton();">
+                                <p:commandButton value="Check Interim " ajax="false" action="inward_bill_intrim" actionListener="#{bhtSummeryController.prepareNewBill()}"  styleClass="noPrintButton" onclick="onSubmitButton();">
                                 </p:commandButton>
                             </h:panelGrid>
                         </p:panel>
