--- a/src/main/webapp/inward/inward_bill_intrim_estimate.xhtml
+++ b/src/main/webapp/inward/inward_bill_intrim_estimate.xhtml
@@ -23,7 +23,7 @@
                         <p:commandButton ajax="false"  value="Refresh" style="float:right;" action="#{bhtSummeryController.createTablesWithEstimatedProfessionalFees()}" onclick="onSubmitButton();" />                        
                         <p:commandButton ajax="false"  value="Clear" style="float:right;" action="#{bhtSummeryController.clear}" onclick="onSubmitButton();" />                                                
                         <p:commandButton ajax="false" value="To Settle Bill" style="float:right;" action="#{bhtSummeryController.toSettle()}" onclick="onSubmitButton();" />
-                        <p:commandButton ajax="false"  value="To Print Intrim Bill" action="#{bhtSummeryController.toPrintItrim()}" onclick="onSubmitButton();" />
+                        <p:commandButton ajax="false"  value="To Print Interim Bill" action="#{bhtSummeryController.toPrintItrim()}" onclick="onSubmitButton();" />
 
                     </f:facet>
                     <h:panelGrid columns="3" style="min-width: 100%;">
