--- a/src/main/webapp/inward/inward_reports.xhtml
+++ b/src/main/webapp/inward/inward_reports.xhtml
@@ -58,7 +58,7 @@
                                         <p:commandButton  ajax="false" value="BHT Break Down (TAB Format)" action="inward_bill_intrim_finalized" actionListener="#{bhtSummeryFinalizedController.makeNull()}" /> 
                                         <p:commandButton  ajax="false" value="BHT Break Down (Table Format)" action="inward_bill_final_break_down" /> 
                                         <p:commandButton  ajax="false" value="BHT Sevice Errror Diduction" action="inward_bill_final_break_down_error" rendered="false" /> 
-                                        <p:commandButton  ajax="false" value="BHT Intrim Errror Correction" action="inward_bill_intrim_finalized_error_correction" /> 
+                                        <p:commandButton  ajax="false" value="BHT Interim Errror Correction" action="inward_bill_intrim_finalized_error_correction" /> 
                                         <p:commandButton ajax="false" value="Error" action="#{bhtSummeryFinalizedController.errorCheck}" rendered="false"/>
                                         <p:commandButton ajax="false" value="Reset Nurse Speciality" action="#{bhtSummeryFinalizedController.errorCheck2}" rendered="false" />
                                         <p:commandButton ajax="false" value="Reset Gross Pharmacy" action="#{bhtSummeryFinalizedController.errorCorrectionPharmacy()}" rendered="false"/>
