--- a/src/main/webapp/inward/pharmacy_reprint_bill_sale_bht.xhtml
+++ b/src/main/webapp/inward/pharmacy_reprint_bill_sale_bht.xhtml
@@ -52,7 +52,7 @@
                         <p:commandButton ajax="false" value="Mark As Un Check"
                                         action="#{pharmacyBillSearch.markAsUnChecked()}"
                                          rendered="#{webUserController.hasPrivilege('InwardUnCheck')}" onclick="onSubmitButton();" />
-                        <p:commandButton ajax="false" value="Back To Intrim"
+                        <p:commandButton ajax="false" value="Back To Interim"
                                         action="/inward/inward_bill_intrim" onclick="onSubmitButton();" />
                     </p:panel>
 
