--- a/src/main/webapp/resources/ezcomp/preferences.xhtml
+++ b/src/main/webapp/resources/ezcomp/preferences.xhtml
@@ -250,7 +250,7 @@
                             <h:outputLabel value="Inward Mo Charge Calculate Initial Time"></h:outputLabel>
                             <h:selectBooleanCheckbox value="#{sessionController.currentPreference.inwardMoChargeCalculateInitialTime}"/>
 
-                            <h:outputLabel value="Change Admission Fee in Intrim Bill"></h:outputLabel>
+                            <h:outputLabel value="Change Admission Fee in Interim Bill"></h:outputLabel>
                             <h:selectBooleanCheckbox value="#{sessionController.currentPreference.inwardChangeAdmissionFee}"/>
 
                         </h:panelGrid>
