--- a/src/main/webapp/resources/inward/bill/intrimBill.xhtml
+++ b/src/main/webapp/resources/inward/bill/intrimBill.xhtml
@@ -23,7 +23,7 @@
                     <table class="heading" >
                         <tr>
                             <td colspan="4">
-                                <h:outputLabel class="mark" value="**Intrim Bill**" />
+                                <h:outputLabel class="mark" value="**Interim Bill**" />
                             </td>
                         </tr>
                     </table>
