--- a/src/main/webapp/inward/inward_reprint_bill_intrim.xhtml
+++ b/src/main/webapp/inward/inward_reprint_bill_intrim.xhtml
@@ -16,8 +16,8 @@
                     <p:panel header="Reprint" styleClass="alignTop" >
                         <h:panelGrid columns="1">
 
-                            <p:commandButton value="Reprint Intrim" ajax="false" onclick="onSubmitButton();"  >
-                                <p:printer target="intrim" ></p:printer>
+                            <p:commandButton value="Reprint Interim" ajax="false" onclick="onSubmitButton();"  >
+                                <p:printer target="Interim" ></p:printer>
                             </p:commandButton>  
 
                         </h:panelGrid>
@@ -91,7 +91,7 @@
                     </p:panel>
 
 
-                    <h:panelGroup id="intrim" styleClass="noBorder">                  
+                    <h:panelGroup id="Interim" styleClass="noBorder">                  
                         <bi:intrimBill  bill="#{inwardSearch.bill}"/>
                     </h:panelGroup>
 
