--- a/src/main/webapp/inward/inward_reprint_bill_payment.xhtml
+++ b/src/main/webapp/inward/inward_reprint_bill_payment.xhtml
@@ -34,7 +34,7 @@
                                                 action="#{inwardSearch.markAsUnChecked()}"
                                                  rendered="#{webUserController.hasPrivilege('InwardUnCheck')}" onclick="onSubmitButton();" />
                                
-                                <p:commandButton ajax="false" value="Back To Intrim" action="/inward/inward_bill_intrim" 
+                                <p:commandButton ajax="false" value="Back To Interim" action="/inward/inward_bill_intrim" 
                                                 actionListener="#{bhtSummeryController.createTables()}"
                                                  onclick="onSubmitButton();" />
                             </p:panel>
