closes #1067 Signed-off-by: PasinduW99 <pwathsara@gmail.com>

--- a/src/main/webapp/resources/bill/five_five_paper_with_headings.xhtml
+++ b/src/main/webapp/resources/bill/five_five_paper_with_headings.xhtml
@@ -30,9 +30,9 @@
                 <div>
                     <h:outputLabel value="#{cc.attrs.bill.department.address}"/>
                 </div>
-                <div >
-                    <h:outputLabel value="#{cc.attrs.bill.department.telephone1} "/>
-                    <h:outputLabel value="#{cc.attrs.bill.department.telephone2}"/>
+                <div class="text-center">
+                    <h:outputLabel value="#{cc.attrs.bill.department.telephone1} " class="w-25"/>
+                    <h:outputLabel value="#{cc.attrs.bill.department.telephone2}" class="w-25"/>
                 </div>
                 <div >
                     <h:outputLabel value="#{cc.attrs.bill.department.fax}"/>                                                 
