--- a/src/main/webapp/resources/inward/bill/finalProfessionalBill.xhtml
+++ b/src/main/webapp/resources/inward/bill/finalProfessionalBill.xhtml
@@ -29,8 +29,8 @@
                             <td colspan="4">
                                 <h:outputLabel class="mark" value="**Professional Bill**" 
                                                rendered="#{cc.attrs.duplicate ne true and cc.attrs.hosCopy ne true}"/>
-<!--                                <h:outputLabel class="mark" value="**Final Bill Original**" 
-                                               rendered="#{cc.attrs.duplicate ne true and cc.attrs.hosCopy ne true}"/>-->
+                                <!--                                <h:outputLabel class="mark" value="**Final Bill Original**" 
+                                                                               rendered="#{cc.attrs.duplicate ne true and cc.attrs.hosCopy ne true}"/>-->
                             </td>
                         </tr>
                         <tr>
@@ -44,98 +44,134 @@
                         </tr>
                     </table>
 
-                    <table>
-                        <tr >
-                            <td >
+                    <!--                    <table>
+                                            <tr >
+                                                <td >
+                                                    <h:outputLabel value="Patient Name" />
+                                                </td>
+                                                <td >
+                                                    <h:outputLabel value=" : " />
+                                                </td>
+                                                <td >
+                                                    <h:outputLabel value="#{cc.attrs.bill.patientEncounter.patient.person.nameWithTitle}" />
+                                                </td>                           
+                                            </tr>
+                                            <tr >
+                                                <td >
+                                                    <h:outputLabel value="BHT No" />
+                                                </td>
+                                                <td >
+                                                    <h:outputLabel value=" : " />
+                                                </td>
+                                                <td >
+                                                    <h:outputLabel value="#{cc.attrs.bill.patientEncounter.bhtNo}" />
+                                                </td>                           
+                                            </tr>
+                                            <tr >
+                                                <td >
+                                                    <h:outputLabel value="Bill No" />
+                                                </td>
+                                                <td >
+                                                    <h:outputLabel value=" : " />
+                                                </td>
+                                                <td >
+                                                    <h:outputLabel value="#{cc.attrs.bill.insId}" />
+                                                </td>                           
+                                            </tr>
+                                            <tr>
+                                                <td >
+                                                    <h:outputLabel value="Address : " />
+                                                </td>
+                                                <td >
+                                                    <h:outputLabel value="#{cc.attrs.bill.patientEncounter.patient.person.address}" />
+                                                </td>                           
+                                            </tr>
+                                            <tr >
+                                                <td >
+                                                    <h:outputLabel value="Guardian : " />
+                                                </td>
+                                                <td >
+                                                    <h:outputLabel value="#{cc.attrs.bill.patientEncounter.guardian.nameWithTitle}" />
+                                                </td>                           
+                                            </tr>
+                    
+                                            <tr>
+                                                <td >
+                                                    <h:outputLabel value="Time of Admission : " />
+                                                </td>
+                                                <td >
+                                                    <h:outputLabel value="#{cc.attrs.bill.patientEncounter.printingAdmissionTime}" >
+                                                        <f:convertDateTime pattern="dd MM yyyy h:mm a" />
+                                                    </h:outputLabel>
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td >
+                                                    <h:outputLabel value="Time of Discharged : " />
+                                                </td>
+                                                <td >
+                                                    <h:outputLabel value="#{cc.attrs.bill.patientEncounter.printingDischargeTime}" >
+                                                        <f:convertDateTime pattern="dd MM yyyy h:mm a" />
+                                                    </h:outputLabel>
+                                                </td>
+                                            </tr>                        
+                                            <tr >
+                                                <td>
+                                                    <h:outputLabel value="Company : "  rendered="#{cc.attrs.bill.patientEncounter.creditCompany ne null}"/>
+                                                </td>
+                                                <td >
+                                                    <h:outputLabel value="#{cc.attrs.bill.patientEncounter.creditCompany.name}" />
+                                                </td>                            
+                                            </tr>      
+                                            <tr >
+                                                <td >
+                                                    <h:outputLabel value="BHT : " />
+                                                </td>
+                                                <td >
+                                                    <h:outputLabel value="#{cc.attrs.bill.patientEncounter.bhtNo}" />
+                                                </td>    
+                    
+                                            </tr>      
+                                        </table>-->
+
+                    <div class="px-5">
+                        <div class="row">
+                            <div class="col-1">
                                 <h:outputLabel value="Patient Name" />
-                            </td>
-                            <td >
-                                <h:outputLabel value=" : " />
-                            </td>
-                            <td >
+                            </div>
+                            <div class="col-1">
+                                <h:outputLabel value=":" />
+                            </div>
+                            <div class="col-10 text-left">
                                 <h:outputLabel value="#{cc.attrs.bill.patientEncounter.patient.person.nameWithTitle}" />
-                            </td>                           
-                        </tr>
-                        <tr >
-                            <td >
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-1">
                                 <h:outputLabel value="BHT No" />
-                            </td>
-                            <td >
-                                <h:outputLabel value=" : " />
-                            </td>
-                            <td >
+                            </div>
+                            <div class="col-1">
+                                <h:outputLabel value=":" />
+                            </div>
+                            <div class="col-10">
                                 <h:outputLabel value="#{cc.attrs.bill.patientEncounter.bhtNo}" />
-                            </td>                           
-                        </tr>
-                        <tr >
-                            <td >
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-1">
                                 <h:outputLabel value="Bill No" />
-                            </td>
-                            <td >
-                                <h:outputLabel value=" : " />
-                            </td>
-                            <td >
+                            </div>
+                            <div class="col-1">
+                                <h:outputLabel value=":" />
+                            </div>
+                            <div class="col-10">
                                 <h:outputLabel value="#{cc.attrs.bill.insId}" />
-                            </td>                           
-                        </tr>
-<!--                        <tr>
-                            <td >
-                                <h:outputLabel value="Address : " />
-                            </td>
-                            <td >
-                                <h:outputLabel value="#{cc.attrs.bill.patientEncounter.patient.person.address}" />
-                            </td>                           
-                        </tr>
-                        <tr >
-                            <td >
-                                <h:outputLabel value="Guardian : " />
-                            </td>
-                            <td >
-                                <h:outputLabel value="#{cc.attrs.bill.patientEncounter.guardian.nameWithTitle}" />
-                            </td>                           
-                        </tr>
+                            </div>
+                        </div>
+                    </div>
 
-                        <tr>
-                            <td >
-                                <h:outputLabel value="Time of Admission : " />
-                            </td>
-                            <td >
-                                <h:outputLabel value="#{cc.attrs.bill.patientEncounter.printingAdmissionTime}" >
-                                    <f:convertDateTime pattern="dd MM yyyy h:mm a" />
-                                </h:outputLabel>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td >
-                                <h:outputLabel value="Time of Discharged : " />
-                            </td>
-                            <td >
-                                <h:outputLabel value="#{cc.attrs.bill.patientEncounter.printingDischargeTime}" >
-                                    <f:convertDateTime pattern="dd MM yyyy h:mm a" />
-                                </h:outputLabel>
-                            </td>
-                        </tr>                        
-                        <tr >
-                            <td>
-                                <h:outputLabel value="Company : "  rendered="#{cc.attrs.bill.patientEncounter.creditCompany ne null}"/>
-                            </td>
-                            <td >
-                                <h:outputLabel value="#{cc.attrs.bill.patientEncounter.creditCompany.name}" />
-                            </td>                            
-                        </tr>      
-                        <tr >
-                            <td >
-                                <h:outputLabel value="BHT : " />
-                            </td>
-                            <td >
-                                <h:outputLabel value="#{cc.attrs.bill.patientEncounter.bhtNo}" />
-                            </td>    
-
-                        </tr>      -->
-                    </table>
-
-
-                    <ui:repeat  class="tbl"  value="#{cc.attrs.bill.billItems}" var="bip">
+                    <div class="px-5">
+                        <ui:repeat  class="tbl"  value="#{cc.attrs.bill.billItems}" var="bip">
                         <h:panelGroup rendered="#{bip.inwardChargeType eq 'ProfessionalCharge'}">
                             <br></br>
                             <p:dataTable style="noBorder" value="#{bip.proFees}" var="fe">
@@ -173,6 +209,7 @@
                             </p:dataTable>                         
                         </h:panelGroup>
                     </ui:repeat>
+                    </div>
 
 
 
